src/test/ui/parser/omitted-arg-in-item-fn.stderr
error: expected one of `:` or `@`, found `)`
  --> $DIR/omitted-arg-in-item-fn.rs:1:9
   |
LL | fn foo(x) {
   |         ^ expected one of `:` or `@` here
   |
   = note: anonymous parameters are removed in the 2018 edition (see RFC 1685)
help: if this was a parameter name, give it a type
   |
LL | fn foo(x: TypeName) {
   |        ^^^^^^^^^^^
help: if this is a type, explicitly ignore the parameter name
   |
LL | fn foo(_: x) {
   |        ^^^^

error: aborting due to previous error

