src/test/ui/parser/omitted-arg-in-item-fn.rs
fn foo(x) { //~ ERROR expected one of `:` or `@`, found `)`
}

fn main() {}
